<resources>
    <string name="app_name">App1-GastoViagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de Quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço por Litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="km_per_liter">Km por Litro</string>
    <string name="total_spend">Seu gasto total será de:</string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">calcular</string>
    <string name="fill_all_fields">Preencha todos os campos.</string>
</resources>